--- a/aula-003/atividade002/index.html
+++ b/aula-003/atividade002/index.html
@@ -18,10 +18,13 @@
         </p>
         <br><br>
         <label for="moeda">Insira o valor</label><br>
-        <input type="number" id="valor" size="2" /><br>
-        <button type="button">Converter</button>
-        <h2 id="valorConvertido"></h2>
+        <input type="number" id="valor" value=""/><br>
+        <button type="button" onclick="fnconsersao()">Converter </button>
+        <h2 id="valorConvertido" ></h2>
+        <h2 id="valorConvertidoU" ></h2>
     </div>
+
+    <script src="app.js"></script>
 </body>
 
 </html>
